# DEPRECATED-rust-awesome-app

./: Cargo.toml
src/: cmd_app.rs  error.rs  exec.rs  main.rs  run_new.rs  utils.rs
