[package]
name = "awesome-app"
version = "0.0.3-SNAPSHOT"
authors = ["Jeremy Chone <jeremy.chone@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Yet another S3 command line utilities... but env driven, per bucket."
categories = ["gui", "web-programming", "command-line-utilities", "config"]
edition = "2021"
homepage = "https://github.com/jeremychone/rust-awesome-app.git"
repository = "https://github.com/jeremychone/rust-awesome-app.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap =  {version = "3", features = ["cargo"]}
thiserror = "1"
aho-corasick = "0.7"