[package]
name = "awesome-app"
version = "0.0.4-SNAPSHOT"
authors = ["Jeremy Chone <jeremy.chone@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Rust CLI to create Awesome Desktop Application with Rust, Tauri, and Native Web Components"
categories = ["gui", "web-programming", "command-line-utilities", "config"]
edition = "2021"
homepage = "https://github.com/jeremychone/rust-awesome-app.git"
repository = "https://github.com/jeremychone/rust-awesome-app.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap =  {version = "3", features = ["cargo"]}
thiserror = "1"
aho-corasick = "0.7"